# fund-manager

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  pyproject.toml
doc/: 01-蓝图.md  02-高阶方案.md  03-技术文档.md  04-仓库初始化清单.md  05-Codex启动提示词.md  06-边界与接口清单.md  07-接口补齐计划.md  08-观察池与风向标MVP设计.md  09-系统内核与AI边界重构计划.md
memory/: 2026-04-03.md
scripts/: backfill_nav.py  backfill_nav_pg.py  demo.py  dev.ps1  import_all_funds.py  import_all_nav_history.py  migrate_to_pg.py  portfolio_daily_report.py  repair_position_lot_2026_04_11.sql  repair_position_lot_2026_04_11_fix_012348.sql
skills/fund-manager-interfaces/: SKILL.md
skills/fund-manager-interfaces/references/: core-api.md
src/fund_manager/: __init__.py
src/fund_manager/admin/: __init__.py  cli.py
src/fund_manager/agents/: __init__.py
src/fund_manager/agents/prompts/: challenger_agent.md  coordinator_agent.md  judge_agent.md  review_agent.md  strategy_agent.md
src/fund_manager/agents/runtime/: __init__.py  challenger_agent.py  contracts.py  judge_agent.py  review_agent.py  shared.py  strategy_agent.py
src/fund_manager/agents/tools/: __init__.py  portfolio_tools.py
src/fund_manager/agents/workflows/: __init__.py  daily_decision.py  strategy_debate.py  weekly_review.py
src/fund_manager/apps/: __init__.py
src/fund_manager/apps/api/: dependencies.py  errors.py  main.py  request_metadata.py
src/fund_manager/core/: __init__.py  ai_artifacts.py  config.py  fact_packs.py  run_identity.py  serialization.py
src/fund_manager/core/domain/: __init__.py  decimal_constants.py  metrics.py
src/fund_manager/core/rules/: __init__.py
src/fund_manager/core/services/: __init__.py  analytics_service.py  decision_feedback_service.py  decision_reconciliation_service.py  decision_service.py  fund_data_sync_service.py  policy_service.py  polymarket_service.py  portfolio_read_service.py  portfolio_service.py  transaction_lot_sync_service.py  transaction_service.py
src/fund_manager/core/watchlist/: __init__.py  service.py
src/fund_manager/data/: __init__.py  watchlist_seed.json
src/fund_manager/data_adapters/: __init__.py  akshare_adapter.py  import_holdings.py  import_transactions.py  polymarket_adapter.py
src/fund_manager/mcp/: __init__.py  server.py  service.py
src/fund_manager/reports/: __init__.py
src/fund_manager/scheduler/: __init__.py  cli.py  engine.py  jobs.py  logging.py  registry.py  types.py
src/fund_manager/storage/: __init__.py  db.py  models.py
src/fund_manager/storage/repo/: __init__.py  (+16 more)
tests/fixtures/holdings/: append_snapshot.csv  bootstrap_main.csv
tests/integration/data_adapters/: test_akshare_adapter_pipeline.py  test_import_holdings_pipeline.py  test_import_transactions_pipeline.py
tests/integration/scheduler/: test_scheduler_integration.py
tests/integration/storage/: test_migrations.py
tests/unit/admin/: test_admin_cli.py
tests/unit/data_adapters/: test_akshare_adapter.py  test_import_holdings.py  test_import_transactions.py
tests/unit/mcp/: test_service.py
tests/unit/scheduler/: test_cli.py  test_engine.py  test_jobs.py  test_registry.py
tests/unit/scripts/: test_portfolio_daily_report.py
tests/unit/storage/: test_db.py  test_models.py
tests/unit/watchlist/: test_watchlist_service.py
(+47 files in other folders)
